<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_data"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/img_circle"
            android:layout_width="@dimen/data_circle_size"
            android:layout_height="@dimen/data_circle_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/itemcheck_circle_margin_top"
            android:background="@drawable/circle">

            <TextView
                android:id="@+id/tv_heartbeat_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/itemcheck_default_margin_between_text_view"
                android:text="@string/steady"
                android:textColor="@android:color/white"
                android:textSize="@dimen/itemcheck_text_size_big" />

            <TextView
                android:id="@+id/tv_cur_hearbeat_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_heartbeat_state"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/current_heartbeat_rate_value"
                android:textColor="@color/colorHighlight"
                android:textSize="@dimen/itemcheck_text_size_small" />

            <TextView
                android:id="@+id/textview01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@id/tv_cur_hearbeat_rate"
                android:text="@string/current_heartbeat_rate"
                android:textColor="@android:color/white"
                android:textSize="@dimen/itemcheck_text_size_small" />

            <TextView
                android:id="@+id/textview02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_heartbeat_state"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/last_heartbeat"
                android:textColor="@android:color/white"
                android:textSize="@dimen/itemcheck_text_size_small" />

            <TextView
                android:id="@+id/tv_ave_heartbeat_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/textview02"
                android:layout_centerHorizontal="true"
                android:text="@string/today_average_heartbeat_rate_value"
                android:textColor="@android:color/white"
                android:textSize="@dimen/itemcheck_text_size_small" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_warning_heartbeat"
            android:clickable="true"
            android:visibility="invisible"
            android:layout_width="@dimen/icon_warning_length"
            android:layout_height="@dimen/icon_warning_length"
            android:src="@drawable/ic_warning"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/chart_heart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_data"
        android:orientation="vertical"
        android:padding="@dimen/chart_padding">

    </LinearLayout>
</RelativeLayout>
