<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/app_bar_padding"
    android:background="@drawable/bg">

    <!-- 应用图标  -->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/login_logo_length"
        android:layout_height="@dimen/login_logo_length"
        android:layout_marginTop="@dimen/login_logo_margin_top"
        android:layout_marginBottom="@dimen/login_logo_margin_bottom"
        android:layout_centerHorizontal="true"
        android:src="@drawable/zmlogo"/>

    <!-- 用户ID输入栏  -->
    <EditText
        android:id="@+id/et_username"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_et_horizontal_margin"
        android:layout_marginRight="@dimen/login_et_horizontal_margin"
        android:layout_below="@id/img_logo"
        android:hint="@string/hint_phone"
        android:background="@drawable/edittext_bg"/>

    <!-- 用户密码输入栏  -->
    <EditText
        android:id="@+id/et_password"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_et_horizontal_margin"
        android:layout_marginRight="@dimen/login_et_horizontal_margin"
        android:layout_marginTop="@dimen/login_et_spacing"
        android:layout_below="@id/et_username"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg"/>

    <!-- 登录按钮  -->
    <Button
        android:id="@+id/bt_login"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_et_horizontal_margin"
        android:layout_marginRight="@dimen/login_et_horizontal_margin"
        android:layout_marginTop="@dimen/login_btn_login_margin_top"
        android:layout_below="@id/et_password"
        android:text="@string/bt_login"
        android:textSize="@dimen/login_btn_text_size"
        android:textColor="@android:color/white"
        android:background="@drawable/button_bg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:layout_below="@id/bt_login">

        <TextView
            android:id="@+id/tv_setIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设置IP地址"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/login_tv_text_size"
            android:clickable="true" />

        <TextView
            android:id="@+id/tv_searchpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_pwd"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/login_tv_text_size"
            android:clickable="true"/>
    </RelativeLayout>

</RelativeLayout>
